Add new meta tags and update content

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -7,9 +7,11 @@
             </button>
             <h2 class="h4 headline">Short Introduction</h2>
             <div class="content">
-                Hi :) I'm Dawid Front-end and Backend Developer (Fullstack). I'm 22 Year old and I'm currently working as Azubi
-                in Germany Company. I enjoy playing competitive games like League of Legends or Counter-Strike, in other words I'm a Gamer :D.
-                I also spent like half year on Sport and I also try to eat healthy but eating healthy for me doesn't work at all :sweat_smile:
+                Hi :) I'm Dawid Front-end and Backend Developer (Fullstack).
+                I'm 22 Years old and I'm currently working as Azubi in a German Company.
+                I enjoy playing competitive games like League of Legends or Counter-Strike,
+                in other words, I'm a gamer :D. I also spent like a few years on sport and even now I'm
+                trying to eat healthily but it doesn't quite work out with my lifestyle.
             </div>
             <div class="mail">
                 If you want to Contact me through E-Mail then please use this one: <a href="mailto:dawidoleksiuk@wp.pl" class="link">Send me Mail</a>
