--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,9 +11,13 @@
     <meta property="og:type" content="website" >
     <meta property="og:description" content="Discover my Portfolio to get information about me and also inspiration." >
     <meta property="og:locale" content="pl_PL" >
-    <meta property="og:image" content="/logo1.png">
-    <meta property="og:url" content="https://akalientess.netlify.app/">
-    <meta property="og:locale:alternate" content="en_GB" >
+    <meta property="og:image" content="/seoAkalientess.png">
+    <meta property="og:url" content="{{ .Site.BaseURL }}">
+    <meta property="og:locale:alternate" content="en_US" >
+    <meta name="twitter:site" content="@DawidOleksiuk">
+    <meta name="twitter:title" content="AkaLientesS">
+    <meta name="twitter:description" content="Discover my Portfolio to get information about me and also inspiration.">
+    <meta name="twitter:image" content="/seoAkalientess.png">
     <link rel="icon" type="image/png" href="{{ (resources.Get "favicon.png").RelPermalink }}">
     <link rel="apple-touch-icon" href="{{ (resources.Get "favicon.png").RelPermalink }}">
 
