Fixed links on mobile devices

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,13 +34,13 @@
                     </ul>
                     <ul class="social-links">
                         <li>
-                            <a href="#" class="link">Github</a>
+                            <a href="https://github.com/shadown125" rel="external noopener" target="_blank" class="link">Github</a>
                         </li>
                         <li>
-                            <a href="#" class="link">Twitter</a>
+                            <a href="https://twitter.com/DawidOleksiuk" rel="external noopener" target="_blank" class="link">Twitter</a>
                         </li>
                         <li>
-                            <a href="#" class="link">Facebook</a>
+                            <a href="https://www.linkedin.com/in/dawid-ol-2478311a4/" rel="external noopener" target="_blank" class="link">Linkedin</a>
                         </li>
                     </ul>
                 </div>
