--- a/layouts/partials/sections/about-me.html
+++ b/layouts/partials/sections/about-me.html
@@ -21,7 +21,7 @@
                             <div data-overlay></div>
                             <div class="content">{{ .Content }}</div>
                         </div>
-                        <div class="section-text">About</div>
+                        <div class="section-text" aria-hidden="true">About</div>
                         <div class="mask mask-about-me technology" data-overlay>
                             <h4 class="h4 headline">Technologies I've learned</h4>
                             <ul class="technologies">
