--- a/layouts/partials/sections/staging.html
+++ b/layouts/partials/sections/staging.html
@@ -20,6 +20,8 @@
         {{ partial "social-links.html" . }}
     </div>
     <div class="start-link" data-second-overlay>
-        <a href="#about-me"></a>
+        <a href="#about-me">
+            <span>Next Section</span>
+        </a>
     </div>
 </section>
