--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -14,6 +14,7 @@
 @use 'technologies';
 @use 'staging';
 @use 'projects';
+@use 'learn-more';
 @use 'social-links';
 @use 'footer';
 @use 'reset-list';
