--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,5 +5,6 @@
     {{ partial "sections/projects.html" . }}
     {{ partial "sections/learn-more.html" . }}
     {{ partial "contact.html" . }}
+    {{ partial "hacking-game.html" . }}
 
 {{ end }}
