--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
     {{ partial "loading-mask.html" . }}
     {{ partial "sections/about-me.html" . }}
     {{ partial "sections/projects.html" . }}
-    {{ partial "sections/learn-more.html" . }}
+    {{ partial "sections/get-more.html" . }}
     {{ partial "contact.html" . }}
     {{ partial "hacking-game.html" . }}
 
