--- a/layouts/partials/hacking-game.html
+++ b/layouts/partials/hacking-game.html
@@ -1,18 +1,31 @@
-<div class="console-container hidden" data-console-container>
-    <div class="number-container hidden" data-number-container></div>
-    <div class="answer-container">
-        <div class="countdown">
-            <div class="progress-bar" data-answer-progress-bar></div>
+<div class="console" data-console>
+    <div class="console-container hidden" data-console-container>
+        <pre class="ascii-art" data-ascii-art>
+           _         _      _            _             _____
+     /\   | |       | |    (_)          | |           / ____|
+    /  \  | | ____ _| |     _  ___ _ __ | |_ ___  ___| (___
+   / /\ \ | |/ / _` | |    | |/ _ \ '_ \| __/ _ \/ __|\___ \
+  / ____ \|   < (_| | |____| |  __/ | | | ||  __/\__ \____) |
+ /_/    \_\_|\_\__,_|______|_|\___|_| |_|\__\___||___/_____/
+        </pre>
+        <div class="number-container hidden" data-number-container></div>
+        <div class="text-container" data-text-container>
+            <h3 class="loading-text" data-loading-text>Establish Connection</h3>
+            <div data-answer-reveal class="revealed-answer"></div>
+            <div data-revealed-submitted-text></div>
         </div>
-        <div class="question hidden" data-answer-question></div>
-        <div class="box">
-            <div class="box-description">Answer</div>
-            <input class="input" placeholder="blue square" data-answer-input>
+        <div class="answer-container">
+            <div class="countdown hidden" data-answer-countdown>
+                <div class="progress-bar" data-answer-progress-bar></div>
+            </div>
+            <div class="question hidden" data-answer-question></div>
+            <div class="box" data-box>
+                <div class="box-description hidden" data-answer-box-description>Answer</div>
+            </div>
+            <div class="input-answer-box">
+                <label for="answer-input" class="hidden" data-answer-input-label>Your answer:</label>
+                <input type="text" id="answer-input" class="input answer-input hidden" placeholder="blue square" data-answer-input>
+            </div>
         </div>
     </div>
-    <div class="text-container" data-text-container>
-        <h3 class="loading-text" data-loading-text>Establish Connection</h3>
-    </div>
-    <div data-answer-reveal></div>
-    <div data-revealed-submitted-text></div>
 </div>
