Improve CSS styles for new mini game

--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -14,7 +14,7 @@
 @use 'technologies';
 @use 'staging';
 @use 'projects';
-@use 'learn-more';
+@use 'hacking-console';
 @use 'social-links';
 @use 'footer';
 @use 'reset-list';
