Change button name

--- a/assets/src/styles/buttons/_styles.scss
+++ b/assets/src/styles/buttons/_styles.scss
@@ -265,7 +265,7 @@
     }
 }
 
-.button-learn-more {
+.button-get-more {
     display: flex;
     position: relative;
     padding: susanoo.rem-calc(10) susanoo.rem-calc(30);
