--- a/layouts/partials/sections/get-more.html
+++ b/layouts/partials/sections/get-more.html
@@ -1,7 +1,7 @@
 <section class="section">
     <div class="wrapper">
         <div class="content">
-            <button class="button-learn-more" data-hacking-button><span>Get more</span></button>
+            <button class="button-get-more" data-hacking-button><span>Get more</span></button>
         </div>
     </div>
 </section>
