Add new Distributor cards section

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,6 +4,7 @@
     {{ partial "sections/about-me.html" . }}
     {{ partial "sections/projects.html" . }}
     {{ partial "sections/get-more.html" . }}
+    {{ partial "sections/distributor-cards.html" . }}
     {{ partial "contact.html" . }}
     {{ partial "hacking-game.html" . }}
 
