Add Distributor cards link to navigation

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,6 +29,9 @@
                             <a href="#projects" class="link" data-nav-link>Projects</a>
                         </li>
                         <li>
+                            <a href="#distributor-cards" class="link" data-nav-link>Cards</a>
+                        </li>
+                        <li>
                             <button class="link" data-nav-link data-nav-contact>Contact</button>
                         </li>
                     </ul>
