Add subpages skeleton and link the cards

--- a/layouts/partials/sections/distributor-cards.html
+++ b/layouts/partials/sections/distributor-cards.html
@@ -6,7 +6,7 @@
         </div>
         <ul>
             <li class="panel">
-                <a href="#" class="katarina">
+                <a href="{{ .Site.BaseURL }}/katarina/" class="katarina">
                     <div class="content">
                         <h2 class="h3 headline">Katarina Bio</h2>
                         <p>
@@ -27,7 +27,7 @@
                 </div>
             </li>
             <li class="panel link-project" data-overlay>
-                <a href="#" class="akali">
+                <a href="{{ .Site.BaseURL }}/akali/" class="akali">
                     <div class="content">
                         <h2 class="h3 headline">Akali Bio</h2>
                         <p>
@@ -52,7 +52,7 @@
                 </div>
             </li>
             <li class="panel">
-                <a href="#" class="yasuo">
+                <a href="{{ .Site.BaseURL }}/yasuo/" class="yasuo">
                     <div class="content">
                         <h2 class="h3 headline">Yasuo Bio</h2>
                         <p>
