Add comming soon sections

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,6 +9,7 @@
     {{ partial "sections/projects.html" . }}
     {{ partial "sections/get-more.html" . }}
     {{ partial "sections/distributor-cards.html" . }}
+    {{ partial "coming-soon-stage.html" . }}
     {{ partial "contact.html" . }}
     {{ partial "hacking-game.html" . }}
 
