--- a/layouts/yasuo/single.html
+++ b/layouts/yasuo/single.html
@@ -1,7 +1,8 @@
 {{ define "header" }}
-    {{ partial "header.html" . }}
+    {{ partial "header-subpage.html" . }}
 {{ end }}
 
 {{ define "content" }}
+    {{ partial "coming-soon-stage.html" . }}
     {{ partial "loading-mask.html" . }}
 {{ end }}
