Make header sticky

--- a/assets/src/styles/page-header/_styles.scss
+++ b/assets/src/styles/page-header/_styles.scss
@@ -2,9 +2,14 @@
 @use 'variables' as variables;
 
 .page-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     background: {
         color: var(--color-black-primary);
     }
+    z-index: 5;
     &.is-revealed {
         .main-navigation {
             visibility: visible;
