--- a/layouts/partials/coming-soon-stage.html
+++ b/layouts/partials/coming-soon-stage.html
@@ -1,4 +1,4 @@
-<div class="coming-soon{{ if eq (relURL .Page.Permalink) ("/" | safeHTML) }} home-page {{ end }}">
+<div class="section coming-soon{{ if eq (relURL .Page.Permalink) ("/" | safeHTML) }} home-page {{ end }}">
     <div class="wrapper">
         <div class="content">
             <h2 class="h2 headline">Coming Soon...</h2>
