Add new icons to the project

--- a/assets/src/styles/icons/_variables.scss
+++ b/assets/src/styles/icons/_variables.scss
@@ -1,3 +1,8 @@
+$icon-sizes: (
+    "defaul": 24px,
+    "big": 36px,
+);
+
 $icon-github: "\eab0";
 $icon-linkedin: "\e902";
 $icon-twitter: "\e901";
@@ -8,3 +13,5 @@ $icon-js: "\e905";
 $icon-html: "\eae5";
 $icon-css: "\eae6";
 $arrow-down: "\e900";
+$chevron-thin-right: "\e908";
+$chevron-thin-left: "\e907";
