--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,6 +10,7 @@
     {{ partial "sections/get-more.html" . }}
     {{ partial "sections/distributor-cards.html" . }}
     {{ partial "coming-soon-stage.html" . }}
+    {{ partial "sections/my-work" . }}
     {{ partial "contact.html" . }}
     {{ partial "hacking-game.html" . }}
 
