--- a/assets/src/styles/my-work/_styles.scss
+++ b/assets/src/styles/my-work/_styles.scss
@@ -78,14 +78,15 @@
     }
     .project-mask {
         position: absolute;
-        top: 0;
+        right: 0;
+        bottom: 0;
         left: 0;
         background: {
-            image: linear-gradient(270deg, #f06449, #ef3636);
+            image: linear-gradient(270deg, #235aa6, #101b3b)
         }
         z-index: 3;
-        width: 0;
-        height: 100%;
-        transition: width 0.5s linear, transform 0.5s 0.75s linear;
+        width: 100%;
+        height: 0;
+        transition: height 0.5s linear, transform 0.5s 0.75s linear;
     }
 }
