--- a/assets/src/styles/slider/_styles.scss
+++ b/assets/src/styles/slider/_styles.scss
@@ -29,7 +29,7 @@
                 opacity: 1;
             }
             .project-mask {
-                width: 100%;
+                height: 100%;
                 transform: translateX(100%);
             }
         }
