Improve images on My Work section

--- a/layouts/partials/sections/my-work.html
+++ b/layouts/partials/sections/my-work.html
@@ -9,7 +9,7 @@
                 <div class="swiper-slide" data-overlay>
                     <a href="https://hiking-norway.netlify.app/" rel="external noopener" target="_blank">
                         <div class="image-wrapper" data-slider-image-wrapper>
-                            <img src="akalientessMyWork1.png" alt="Hiking in Norway">
+                            <img src="akalientessMyWorkImpr1.png" alt="Hiking in Norway">
                         </div>
                         <div class="description">
                             <h2 class="headline h4">Hiking in Norway</h2>
@@ -21,7 +21,7 @@
                 <div class="swiper-slide" data-overlay>
                     <a href="https://fashion-news.netlify.app/" rel="external noopener" target="_blank">
                         <div class="image-wrapper" data-slider-image-wrapper>
-                            <img src="akalientessMyWork2.png" alt="Fashion News">
+                            <img src="akalientessMyWorkImpr2.png" alt="Fashion News">
                         </div>
                         <div class="description">
                             <h2 class="headline h4">Fashion News</h2>
@@ -33,7 +33,7 @@
                 <div class="swiper-slide" data-overlay>
                     <a href="https://running-community.netlify.app/" rel="external noopener" target="_blank">
                         <div class="image-wrapper" data-slider-image-wrapper>
-                            <img src="akalientessMyWork3.png" alt="Running Community">
+                            <img src="akalientessMyWorkImpr3.png" alt="Running Community">
                         </div>
                         <div class="description">
                             <h2 class="headline h4">Running Community</h2>
