Add My Work section to Navigation

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,6 +31,9 @@
                         <a href="#distributor-cards" class="link" data-nav-link>Cards</a>
                     </li>
                     <li>
+                        <a href="#my-work" class="link" data-nav-link>My Work</a>
+                    </li>
+                    <li>
                         <button class="link" data-nav-link data-nav-contact>Contact</button>
                     </li>
                 </ul>
