--- a/layouts/partials/sections/distributor-cards.html
+++ b/layouts/partials/sections/distributor-cards.html
@@ -1,4 +1,4 @@
-<section id="distributor-cards" class="section distributor-cards">
+<section id="distributor-cards" class="section distributor-cards" data-section>
     <div class="wrapper">
         <div class="mask mask-about-me--head" data-overlay>
             <div data-overlay></div>
