--- a/layouts/partials/sections/my-work.html
+++ b/layouts/partials/sections/my-work.html
@@ -1,4 +1,4 @@
-<section class="my-work" id="my-work">
+<section class="my-work" id="my-work" data-section>
     <div class="wrapper">
         <div class="mask mask-about-me--head" data-overlay>
             <div data-overlay></div>
