--- a/layouts/partials/sections/projects.html
+++ b/layouts/partials/sections/projects.html
@@ -1,4 +1,4 @@
-<section class="section projects" id="projects">
+<section class="section projects" id="projects" data-section>
     <div class="wrapper">
         <div class="mask long-text" data-overlay>
             <div data-overlay></div>
