Expand technologies info bar

--- a/assets/src/styles/icons/_variables.scss
+++ b/assets/src/styles/icons/_variables.scss
@@ -15,3 +15,5 @@ $icon-css: "\eae6";
 $arrow-down: "\e900";
 $chevron-thin-right: "\e908";
 $chevron-thin-left: "\e907";
+$icon-react: "\e90a";
+$icon-next-js: "\e909";
