--- a/layouts/partials/sections/about-me.html
+++ b/layouts/partials/sections/about-me.html
@@ -34,6 +34,12 @@
                                 <li class="java-script">
                                     <span>JS</span>
                                 </li>
+                                <li class="react">
+                                    <span>React</span>
+                                </li>
+                                <li class="next-js">
+                                    <span>Next js</span>
+                                </li>
                                 <li class="symfony">
                                     <span>Symfony</span>
                                 </li>
