--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -14,7 +14,7 @@
                 trying to eat healthily but it doesn't quite work out with my lifestyle.
             </div>
             <div class="mail">
-                If you want to Contact me through E-Mail then please use this one: <a href="mailto:dawidoleksiuk@wp.pl" class="link">Send me Mail</a>
+                If you want to Contact me through E-Mail then please use this one: <a href="mailto:dawidoleksiuk7@gmail.com" class="link">Send me Mail</a>
             </div>
             <div>Otherwise you can contact me through social links below</div>
             <div class="section-text">About</div>
